# mm8dread

./: Makefile  Makefile.global.in  README.md  build.bat  configure  configure.in
config/: mkshortcut.vbs
desktop/: Makefile  mm8dread.desktop  mm8dread.xpm
documents/: INSTALL  Makefile  README  changelog  copyright
languages/: Makefile  mm8dread.pot  mm8dread_hu.mo  mm8dread_hu.po
manuals/: Makefile  mm8dread.1.in  mm8dread_en.1
messages/: Makefile  mm8dread.pot  mm8dread_hu.mo  mm8dread_hu.po
packaging/freebsd-txz/: Makefile  pkg-descr  pkg-plist
packaging/linux-bin/: create_links  install  remove_links  uninstall
packaging/linux-deb/: control  mm8dread
packaging/linux-deb-amd64/: control  md5sums
packaging/linux-deb-armhf/: control  copyright  md5sums  postinst  prerm
packaging/linux-deb-i386/: control  copyright  md5sums
packaging/windows-exe/: mm8dread-0.1.nsi  mm8dread-0.2.nsi  mm8dread-0.3.nsi  mm8dread-0.4.nsi
packaging/windows-msi/: mm8dread-0.1.xml  mm8dread-0.2.xml  mm8dread-0.3.xml  mm8dread-0.4.xml
source/: Makefile  config.pas.in  frmmain.lfm  frmmain.lrj  frmmain.lrt  frmmain.pas  mm8dread.lpi  mm8dread.lpr  mm8dread.lps  mm8dread.res  untcommonproc.pas
source/mm8dread/: config.pas.in  frmmain.lfm  frmmain.lrj  frmmain.lrt  frmmain.pas  mm8dread.lpi  mm8dread.lpr  mm8dread.lps  mm8dread.res  untcommonproc.pas
source/pics/: mm8dread_32.xpm  mm8dread_64.xpm
